--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.11.0
       - run: zig build orng-test
       - run: zig-out/bin/orng-test integration
   lint:
