make unit not the top type

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/zig-string"]
 	path = src/zig-string
 	url = https://github.com/JakubSzark/zig-string.git
+[submodule "src/rdgen"]
+	path = src/rdgen
+	url = https://github.com/JakubSzark/zig-string.git
