--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,7 +19,7 @@ jobs:
         zig-version: 0.13.0  # Match the version in your README
     
     - name: Build project
-      run: pwd
+      run: python --version
 
     # Optional: Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
