--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,11 +12,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with: recursive
     
     - name: Set up Zig
       uses: korandoru/setup-zig@v1
       with:
-        zig-version: 0.13.0  # Match the version in your README
+        zig-version: 0.13.0
     
     - name: Build project
       run: python tests/test.py all
