--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,7 +27,7 @@ jobs:
         zig-version: 0.13.0
     
     - name: Build project
-      run: python tests/test.py all
+      run: python tests/test.py all --no-coverage
 
     # Optional: Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
