--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout main
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.head_ref }
+        ref: ${{ github.head_ref }}
 
     - name: Checkout zig-string
       uses: actions/checkout@v4
