--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
     - name: Checkout main
       uses: actions/checkout@v4
-      with:
-        ref: ${{ github.head_ref }}
+      # with:
+      #   ref: ${{ github.head_ref }}
 
     - name: Checkout zig-string
       uses: actions/checkout@v4
