--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Orng CI
+name: zig fmt
 
 on:
   push:
@@ -11,24 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout main
+      uses: actions/checkout@v4
+
+    - name: Checkout zig-string
+      uses: actions/checkout@v4
+      with:
+        repository: 'JakubSzark/zig-string'
+        path: src/zig-string
+        submodules: recursive
     
     - name: Set up Zig
       uses: korandoru/setup-zig@v1
       with:
-        zig-version: 0.13.0  # Match the version in your README
-    
-    - name: Build project
-      run: zig build
-    
-    - name: Run tests
-      run: zig build test
+        zig-version: 0.13.0
     
     - name: Check formatting
       run: zig fmt --check src/**/*.zig
-    
-    - name: Static analysis
-      run: zig build lint  # If you have a lint target
 
     # Optional: Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
@@ -36,3 +35,4 @@ jobs:
       with:
         name: build-logs
         path: zig-cache/log
+
