--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         zig-version: 0.13.0
     
     - name: Check formatting
-      run: zig fmt --check src/**/*.zig
+      run: zig fmt --check src/*.zig
 
     # Optional: Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
