--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .vscode/
 zig-out/
 kcov-out/
-tests/integration/build
+**/build
 tests/fuzz/fuzz.txt
 tests/fuzz/problems.txt
 tests/fuzz/fuzz.orng
