--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,6 +25,9 @@ jobs:
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
+
+    - name: Echo path
+      run: echo $GITHUB_WORKSPACE
     
     - name: Build project
       run: python tests/test.py all --no-coverage
