--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  
+env:
+  ORNG_STD_PATH: $GITHUB_WORKSPACE/std
 
 jobs:
   build-and-test:
@@ -27,7 +30,7 @@ jobs:
         zig-version: 0.13.0
 
     - name: Echo path
-      run: echo $GITHUB_WORKSPACE
+      run: echo $ORNG_STD_PATH
     
     - name: Build project
       run: python tests/test.py all --no-coverage
