--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -30,7 +30,7 @@ jobs:
         zig-version: 0.13.0
 
     - name: Echo path
-      run: echo $ORNG_STD_PATH
+      run: echo $ORNG_STD_PATH $GITHUB_WORKSPACE
     
     - name: Build project
       run: python tests/test.py all --no-coverage
