--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,7 +27,7 @@ jobs:
         zig-version: 0.13.0
 
     - name: Echo path
-      run: export $ORNG_STD_PATH=$GITHUB_WORKSPACE/std && echo $ORNG_STD_PATH $GITHUB_WORKSPACE
+      run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std" && echo $ORNG_STD_PATH $GITHUB_WORKSPACE
     
     - name: Build project
       run: python tests/test.py all --no-coverage
