--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,12 +25,9 @@ jobs:
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
-
-    - name: Echo path
-      run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std" && echo $ORNG_STD_PATH $GITHUB_WORKSPACE
     
     - name: Build project
-      run: python tests/test.py all --no-coverage
+      run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std" && python tests/test.py all --no-coverage
 
     # Optional: Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
