add todo comments

--- a/.github/workflows/build_example.yml
+++ b/.github/workflows/build_example.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # TODO: Should build on Windows too!
     
     steps:
     - name: Checkout main
