--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2019]  # Add Windows support here
+        os: [ubuntu-latest, windows-2019]
     
     runs-on: ${{ matrix.os }}
     
@@ -30,18 +30,15 @@ jobs:
       with:
         zig-version: 0.13.0
     
-    - name: Set ORNG_STD_PATH (Linux)
+    - name: Build project (Linux)
       if: runner.os == 'Linux'
-      run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+      run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std" && python tests/test.py all --no-coverage
     
     - name: Set ORNG_STD_PATH (Windows)
       if: runner.os == 'Windows'
-      run: echo "ORNG_STD_PATH=$GITHUB_WORKSPACE\std" >> $GITHUB_ENV
+      run: echo "ORNG_STD_PATH=$GITHUB_WORKSPACE\std" >> $GITHUB_ENV ; python .\tests\test.py all --no-coverage
 
-    - name: Build project
-      run: python tests/test.py all --no-coverage
-
-    # Optional: Upload artifacts if build fails
+    # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
       if: failure()
       with:
