--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,9 +34,9 @@ jobs:
       if: runner.os == 'Linux'
       run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std" && python tests/test.py all --no-coverage
     
-    - name: Set ORNG_STD_PATH (Windows)
+    - name: Build project (Windows)
       if: runner.os == 'Windows'
-      run: echo "ORNG_STD_PATH=$GITHUB_WORKSPACE\std" >> $GITHUB_ENV ; python .\tests\test.py all --no-coverage
+      run: echo "ORNG_STD_PATH=$GITHUB_WORKSPACE\std" >> $GITHUB_ENV ; python3.10 .\tests\test.py all --no-coverage
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
