--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Build project (Windows)
       if: runner.os == 'Windows'
       run: |
-        echo "ORNG_STD_PATH=$GITHUB_WORKSPACE\std" >> $env:GITHUB_ENV
+        echo "ORNG_STD_PATH=$env:GITHUB_WORKSPACE\std" >> $env:GITHUB_ENV
         python .\tests\test.py all --no-coverage
 
     # Upload artifacts if build fails
