--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -41,6 +41,7 @@ jobs:
     
     - name: Build project (Windows)
       if: runner.os == 'Windows'
+      shell: bash 
       run: |
         echo "ORNG_STD_PATH=${{ github.workspace }}/std" >> $env:GITHUB_ENV
         python .\tests\test.py all --no-coverage
