--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -44,7 +44,7 @@ jobs:
       shell: bash 
       run: |
         echo "ORNG_STD_PATH=${{ github.workspace }}/std" >> $env:GITHUB_ENV
-        python .\tests\test.py all --no-coverage
+        python tests/test.py all --no-coverage
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
