--- a/.github/workflows/build_example.yml
+++ b/.github/workflows/build_example.yml
@@ -8,7 +8,11 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-2019]
+    
+    runs-on: ${{ matrix.os }}
     
     steps:
     - name: Checkout main
@@ -20,13 +24,30 @@ jobs:
         repository: 'JakubSzark/zig-string'
         path: src/zig-string
         submodules: recursive
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
     
     - name: Set up Zig
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
     
-    - name: Build example project
+    - name: Build example project (Linux)
+      if: runner.os == 'Linux'
+      shell: bash
+      run: |
+        #!/bin/bash
+        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+        zig build orng
+        cd examples
+        ../zig-out/bin/orng build
+    
+    - name: Build example project (Windows)
+      if: runner.os == 'Windows'
+      shell: bash
       run: |
         #!/bin/bash
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
