--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -8,7 +8,11 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-2019]
+    
+    runs-on: ${{ matrix.os }}
     
     steps:
     - name: Checkout main
@@ -20,16 +24,31 @@ jobs:
         repository: 'JakubSzark/zig-string'
         path: src/zig-string
         submodules: recursive
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
     
     - name: Set up Zig
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
     
-    - name: Build project
-      run: export ORNG_STD_PATH="$GITHUB_WORKSPACE/std" && python tests/test.py all --no-coverage
+    - name: Build project (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+        python tests/test.py all --no-coverage
+    
+    - name: Build project (Windows)
+      if: runner.os == 'Windows'
+      shell: bash
+      run: |
+        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+        python tests/test.py all --no-coverage
 
-    # Optional: Upload artifacts if build fails
+    # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
       if: failure()
       with:
