--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,12 +34,12 @@ jobs:
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
-
-    - name: Install Dependencies
+    
+    - name: Set up kcov
       if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y kcov
+      uses: sudo-bot/action-kcov@latest
+      with:
+        zig-version: 0.13.0
     
     - name: Build project (Linux)
       if: runner.os == 'Linux'
