--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,12 +35,6 @@ jobs:
       with:
         zig-version: 0.13.0
     
-    - name: Set up kcov
-      if: runner.os == 'Linux'
-      uses: sudo-bot/action-kcov@latest
-      with:
-        zig-version: 0.13.0
-    
     - name: Build project (Linux)
       if: runner.os == 'Linux'
       run: |
@@ -53,6 +47,12 @@ jobs:
       run: |
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         python tests/test.py all --no-coverage
+    
+    - name: Set up kcov
+      if: runner.os == 'Linux'
+      uses: sudo-bot/action-kcov@latest
+      with:
+        cli-args: "--clean --include-path $GITHUB_WORKSPACE/src kcov-out ./$GITHUB_WORKSPACE/zig-out/bin/orng-test coverage"
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
