--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         python tests/test.py all --no-coverage
+        tree $GITHUB_WORKSPACE
     
     - name: Build project (Windows)
       if: runner.os == 'Windows'
@@ -52,7 +53,7 @@ jobs:
       if: runner.os == 'Linux'
       uses: sudo-bot/action-kcov@latest
       with:
-        cli-args: "--clean --include-path $GITHUB_WORKSPACE/src kcov-out .$GITHUB_WORKSPACE/zig-out/bin/orng-test coverage"
+        cli-args: "--clean --include-path $GITHUB_WORKSPACE/src kcov-out $GITHUB_WORKSPACE/zig-out/bin/orng-test coverage"
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
