--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         python tests/test.py all --no-coverage
-        tree $GITHUB_WORKSPACE
+        tree $GITHUB_WORKSPACE -a
     
     - name: Build project (Windows)
       if: runner.os == 'Windows'
