--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -50,12 +50,11 @@ jobs:
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         python tests/test.py all --no-coverage
     
-    - name: Set up kcov
-      if: runner.os == 'Linux'
-      uses: sudo-bot/action-kcov@latest
-      with:
-        cli-args: "--clean --include-path $GITHUB_WORKSPACE/src kcov-out $GITHUB_WORKSPACE/zig-out/bin/orng-test coverage"
-
+    - name: Install kcov
+      run: |
+        sudo apt update
+        sudo apt install -y kcov
+        
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
       if: failure()
