--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -52,8 +52,9 @@ jobs:
     
     - name: Install kcov
       run: |
-        sudo apt-get update
-        sudo apt-get install -y kcov
+        sudo apt search kcov
+        sudo apt update
+        sudo apt install -y kcov
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
