download pb bin

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Install kcov
       run: |
         wget https://github.com/SimonKagstrom/kcov/archive/refs/tags/v43.tar.gz
-        tar -xvf kcov-x86_64.tar.gz
+        tar -xvf v43.tar.gz
         sudo mv kcov /usr/local/bin/
 
     # Upload artifacts if build fails
