--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -52,9 +52,10 @@ jobs:
     
     - name: Install kcov
       run: |
-        wget https://github.com/SimonKagstrom/kcov/archive/refs/tags/v43.tar.gz
-        tar -xvf v43.tar.gz
-        sudo mv kcov /usr/local/bin/
+        wget https://github.com/SimonKagstrom/kcov/releases/download/v42/kcov-amd64.tar.gz
+        tar -xvf kcov-amd64.tar.gz
+        tree usr
+        sudo mv ./usr/local/bin/kcov /usr/local/bin/
         kcov --version
 
     # Upload artifacts if build fails
