--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -52,6 +52,8 @@ jobs:
     
     - name: Install kcov
       run: |
+        sudo apt update
+        sudo apt install libcurl4-openssl-dev
         git clone https://github.com/SimonKagstrom/kcov.git
         cd kcov
         mkdir build && cd build
