--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -54,6 +54,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install libcurl4-openssl-dev
+        sudo apt install libelf-dev
         git clone https://github.com/SimonKagstrom/kcov.git
         cd kcov
         mkdir build && cd build
