--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,22 +35,8 @@ jobs:
       with:
         zig-version: 0.13.0
     
-    - name: Build project (Linux)
+    - name: Build kcov
       if: runner.os == 'Linux'
-      run: |
-        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
-        python tests/test.py all --no-coverage
-        tree $GITHUB_WORKSPACE -a
-        sudo sysctl kernel.yama.ptrace_scope=0
-    
-    - name: Build project (Windows)
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
-        python tests/test.py all --no-coverage
-    
-    - name: Install kcov
       run: |
         sudo apt update
         sudo apt install libcurl4-openssl-dev
@@ -63,6 +49,21 @@ jobs:
         make -j$(nproc)
         sudo make install
         kcov --version
+    
+    - name: Build project (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+        python tests/test.py all
+        tree $GITHUB_WORKSPACE -a
+        sudo sysctl kernel.yama.ptrace_scope=0
+    
+    - name: Build project (Windows)
+      if: runner.os == 'Windows'
+      shell: bash
+      run: |
+        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+        python tests/test.py all --no-coverage
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
