--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,6 +35,15 @@ jobs:
       with:
         zig-version: 0.13.0
     
+    - name: Get Modified Files
+      if: runner.os == 'Linux'
+      id: modified_files
+      run: |
+        TEST_FILES=$(git diff --name-only --diff-filter=AM origin/${{ github.event.pull_request.base.ref }} | grep '^test/' || echo "")
+        SRC_FILES=$(git diff --name-only --diff-filter=AM origin/${{ github.event.pull_request.base.ref }} | grep '^src/' || echo "")
+        echo "test_files=$TEST_FILES" >> $GITHUB_ENV
+        echo "src_files=$SRC_FILES" >> $GITHUB_ENV
+
     - name: Build kcov
       if: runner.os == 'Linux'
       run: |
@@ -55,9 +64,34 @@ jobs:
       run: |
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         python tests/test.py all
-        tree $GITHUB_WORKSPACE -a
-        sudo sysctl kernel.yama.ptrace_scope=0
-    
+        ls -lah kcov-out/
+
+    - name: Ensure Modified Lines in src/ Are Covered
+      if: runner.os == 'Linux'
+      run: |
+        if [ -z "$src_files" ]; then
+          echo "No modified source files, skipping coverage check."
+          exit 0
+        fi
+
+        COVERED_LINES=$(grep -rohE 'src/[^:]+:[0-9]+' coverage/ | cut -d':' -f2 | sort -u)
+        UNCOVERED_LINES=()
+
+        for src_file in $src_files; do
+          MODIFIED_LINES=$(git diff -U0 origin/${{ github.event.pull_request.base.ref }} -- $src_file | grep -E '^\+' | grep -oE '[0-9]+')
+          for line in $MODIFIED_LINES; do
+            if ! echo "$COVERED_LINES" | grep -q "^$line$"; then
+              UNCOVERED_LINES+=("$src_file:$line")
+            fi
+          done
+        done
+
+        if [ ${#UNCOVERED_LINES[@]} -ne 0 ]; then
+          echo "ERROR: The following modified lines are not covered by tests:"
+          printf '%s\n' "${UNCOVERED_LINES[@]}"
+          exit 1
+        fi
+
     - name: Build project (Windows)
       if: runner.os == 'Windows'
       shell: bash
