--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Checkout main
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Checkout zig-string
       uses: actions/checkout@v4
