--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -36,16 +36,6 @@ jobs:
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
-    
-    - name: Get Modified Files
-      if: runner.os == 'Linux'
-      id: modified_files
-      run: |
-        BASE_BRANCH=${{ github.event.pull_request.base.ref }}
-        TEST_FILES=$(git diff --name-only --diff-filter=AM origin/$BASE_BRANCH...HEAD | grep '^test/' | tr '\n' ' ' || echo "")
-        SRC_FILES=$(git diff --name-only --diff-filter=AM origin/$BASE_BRANCH...HEAD | grep '^src/' | tr '\n' ' ' || echo "")
-        echo "test_files=$TEST_FILES" >> $GITHUB_ENV
-        echo "src_files=$SRC_FILES" >> $GITHUB_ENV
 
     - name: Build kcov
       if: runner.os == 'Linux'
@@ -66,34 +56,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
-        python tests/test.py all
-        ls -lah kcov-out/
-
-    - name: Ensure Modified Lines in src/ Are Covered
-      if: runner.os == 'Linux'
-      run: |
-        if [ -z "$src_files" ]; then
-          echo "No modified source files, skipping coverage check."
-          exit 0
-        fi
-
-        COVERED_LINES=$(grep -rohE 'src/[^:]+:[0-9]+' coverage/ | cut -d':' -f2 | sort -u)
-        UNCOVERED_LINES=()
-
-        for src_file in $src_files; do
-          MODIFIED_LINES=$(git diff -U0 origin/${{ github.event.pull_request.base.ref }} -- $src_file | grep -E '^\+' | grep -oE '[0-9]+')
-          for line in $MODIFIED_LINES; do
-            if ! echo "$COVERED_LINES" | grep -q "^$line$"; then
-              UNCOVERED_LINES+=("$src_file:$line")
-            fi
-          done
-        done
-
-        if [ ${#UNCOVERED_LINES[@]} -ne 0 ]; then
-          echo "ERROR: The following modified lines are not covered by tests:"
-          printf '%s\n' "${UNCOVERED_LINES[@]}"
-          exit 1
-        fi
+        python tests/test.py all --no-coverage
 
     - name: Build project (Windows)
       if: runner.os == 'Windows'
