--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -73,8 +73,8 @@ jobs:
         UNCOVERED_LINES=()
 
         for src_file in $src_files; do
-          echo $src_file
           MODIFIED_LINES=$(git diff -U0 origin/${{ github.event.pull_request.base.ref }} -- $src_file | grep -E '^\+' | grep -oE '[0-9]+')
+          echo $MODIFIED_LINES
           for line in $MODIFIED_LINES; do
             if ! echo "$COVERED_LINES" | grep -q "^$line$"; then
               UNCOVERED_LINES+=("$src_file:$line")
@@ -87,7 +87,7 @@ jobs:
           printf '%s\n' "${UNCOVERED_LINES[@]}"
           exit 1
         fi
-        
+
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
       if: failure()
