--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -63,30 +63,7 @@ jobs:
         ls -lah kcov-out/
 
     - name: Ensure Modified Lines in src/ Are Covered
-      run: |
-        if [ -z "$src_files" ]; then
-          echo "No modified source files, skipping coverage check."
-          exit 0
-        fi
-
-        COVERED_LINES=$(grep -rohE 'src/[^:]+:[0-9]+' kcov-out/ | cut -d':' -f2 | sort -u)
-        UNCOVERED_LINES=()
-
-        for src_file in $src_files; do
-          MODIFIED_LINES=$(git diff -U0 origin/${{ github.event.pull_request.base.ref }} -- $src_file | grep -E '^\+' | grep -oE '[0-9]+')
-          echo $MODIFIED_LINES
-          for line in $MODIFIED_LINES; do
-            if ! echo "$COVERED_LINES" | grep -q "^$line$"; then
-              UNCOVERED_LINES+=("$src_file:$line")
-            fi
-          done
-        done
-
-        if [ ${#UNCOVERED_LINES[@]} -ne 0 ]; then
-          echo "ERROR: The following modified lines are not covered by tests:"
-          printf '%s\n' "${UNCOVERED_LINES[@]}"
-          exit 1
-        fi
+      run: python tests/coverage-check.py -s $src_files -b origin/${{ github.event.pull_request.base.ref }}
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
