--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: Integration & negative tests
+name: Coverage
 
 on:
   push:
@@ -8,11 +8,7 @@ on:
 
 jobs:
   build-and-test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2019]
-    
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout main
@@ -36,9 +32,17 @@ jobs:
       uses: korandoru/setup-zig@v1
       with:
         zig-version: 0.13.0
+    
+    - name: Get Modified Files
+      id: modified_files
+      run: |
+        BASE_BRANCH=${{ github.event.pull_request.base.ref }}
+        TEST_FILES=$(git diff --name-only --diff-filter=AM origin/$BASE_BRANCH...HEAD | grep '^test/' | tr '\n' ' ' || echo "")
+        SRC_FILES=$(git diff --name-only --diff-filter=AM origin/$BASE_BRANCH...HEAD | grep '^src/' | tr '\n' ' ' || echo "")
+        echo "test_files=$TEST_FILES" >> $GITHUB_ENV
+        echo "src_files=$SRC_FILES" >> $GITHUB_ENV
 
     - name: Build kcov
-      if: runner.os == 'Linux'
       run: |
         sudo apt update
         sudo apt install libcurl4-openssl-dev
@@ -53,17 +57,12 @@ jobs:
         kcov --version
     
     - name: Build project (Linux)
-      if: runner.os == 'Linux'
       run: |
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
-        python tests/test.py all --no-coverage
+        python tests/test.py modified
 
-    - name: Build project (Windows)
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
-        python tests/test.py all --no-coverage
+    - name: Ensure Modified Lines in src/ Are Covered
+      run: python tests/coverage-check.py -s $src_files -b origin/${{ github.event.pull_request.base.ref }}
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
