--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: 'JakubSzark/zig-string'
+        ref: 'f6f9e5dc7c5c45a72473de245a0e6958ef2bf913'
         path: src/zig-string
         submodules: recursive
 
