--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -58,12 +58,13 @@ jobs:
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         python tests/test.py all --no-coverage
 
-    - name: Build project (Windows)
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
-        python tests/test.py all --no-coverage
+    # TODO: Once zig gets its act together and child process stdout actually works on Windows... smh
+    # - name: Build project (Windows)
+    #   if: runner.os == 'Windows'
+    #   shell: bash
+    #   run: |
+    #     export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
+    #     python tests/test.py all --no-coverage
 
     # Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
