--- a/.github/workflows/test_std.yml
+++ b/.github/workflows/test_std.yml
@@ -1,4 +1,4 @@
-name: Build example project
+name: Build and test std
 
 on:
   push:
@@ -35,25 +35,25 @@ jobs:
       with:
         zig-version: 0.15.1
     
-    - name: Build example project (Linux)
+    - name: Build and test example project (Linux)
       if: runner.os == 'Linux'
       shell: bash
       run: |
         #!/bin/bash
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         zig build orng
-        cd examples
-        ../zig-out/bin/orng build
+        cd std
+        ../zig-out/bin/orng test
     
-    - name: Build example project (Windows)
+    - name: Build and test example project (Windows)
       if: runner.os == 'Windows'
       shell: bash
       run: |
         #!/bin/bash
         export ORNG_STD_PATH="$GITHUB_WORKSPACE/std"
         zig build orng
-        cd examples
-        ../zig-out/bin/orng build
+        cd std
+        ../zig-out/bin/orng test
 
     # Optional: Upload artifacts if build fails
     - uses: actions/upload-artifact@v4
