--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -65,7 +65,9 @@ jobs:
         kcov --include-path "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/kcov-out-tmp1" ../zig-out/bin/orng build
         kcov --include-path "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/kcov-out-tmp2" ../zig-out/bin/orng clean
         kcov --include-path "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/kcov-out-tmp3" ../zig-out/bin/orng test
-        kcov --merge "$GITHUB_WORKSPACE/kcov-out" "$GITHUB_WORKSPACE/kcov-out-tmp1" "$GITHUB_WORKSPACE/kcov-out-tmp2" "$GITHUB_WORKSPACE/kcov-out-tmp3"
+        cd ../std
+        kcov --include-path "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/kcov-out-tmp4" ../zig-out/bin/orng test
+        kcov --merge "$GITHUB_WORKSPACE/kcov-out" "$GITHUB_WORKSPACE/kcov-out-tmp1" "$GITHUB_WORKSPACE/kcov-out-tmp2" "$GITHUB_WORKSPACE/kcov-out-tmp3" "$GITHUB_WORKSPACE/kcov-out-tmp4"
         cd ..
 
     - name: Ensure Modified Lines in src/ Are Covered
