fix coverage, again

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -67,7 +67,7 @@ jobs:
         kcov --include-path "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/kcov-out-tmp3" ../zig-out/bin/orng test
         cd ../std
         kcov --include-path "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/kcov-out-tmp4" ../zig-out/bin/orng test
-        kcov --merge "$GITHUB_WORKSPACE/kcov-out-integration" "$GITHUB_WORKSPACE/kcov-out-negative" "$GITHUB_WORKSPACE/kcov-out-tmp1" "$GITHUB_WORKSPACE/kcov-out-tmp2" "$GITHUB_WORKSPACE/kcov-out-tmp3" "$GITHUB_WORKSPACE/kcov-out-tmp4"
+        kcov --merge "$GITHUB_WORKSPACE/kcov-out-merged" "$GITHUB_WORKSPACE/kcov-out-integration" "$GITHUB_WORKSPACE/kcov-out-negative" "$GITHUB_WORKSPACE/kcov-out-tmp1" "$GITHUB_WORKSPACE/kcov-out-tmp2" "$GITHUB_WORKSPACE/kcov-out-tmp3" "$GITHUB_WORKSPACE/kcov-out-tmp4"
         cd ..
 
     - name: Ensure Modified Lines in src/ Are Covered
